--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Omni_ofertas</string>
     <string name="email">example@gmail.com</string>
     <string name="registro">Registro</string>
-    <string name="confirmar">Confirmar</string>
+    <string name="confirmar">Registrarme</string>
+    <string name="confirmarGmail">Registrarme con Gmail</string>
     <string name="password">Contraseña</string>
     <string name="nombre">Introduzca nombre</string>
     <string name="password_repetir">Repetir contraseña</string>
@@ -17,6 +18,10 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+    <string name="cerrar_sesion">Cerrar Sesión</string>
+
+    <string name="prefs_file">com.example.omni_ofertas.PREFERENCE_FILE_KEY</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
